# ohtupalautus

./: README.md
osa2/nhl-statistics-1/src/: index.py  player.py  player_reader.py  statistics_service.py
osa2/nhl-statistics-1/src/tests/: statistics_service_test.py
osa2/poetry-web/: poetry-web.code-workspace  pyproject.toml
osa3/hello-robot/: log.html  output.xml  report.html
osa3/hello-robot/src/tests/: increase_counter.robot
osa3/login-robot/: log.html  output.xml  pyproject.toml  report.html
osa3/login-robot/results/: log.html  output.xml  report.html
osa3/login-robot/src/services/: user_service.py
osa3/login-robot/src/tests/: login.robot  register.robot  resource.robot
osa4/maksukortti-mock/src/: kassapaate.py
osa4/maksukortti-mock/src/tests/: kassapaate_test.py
